[package]
name = "native"
version = "0.1.0"
authors = ["Eddy Bruel <ejpbruel@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
libandroid-sys = { path = "./libandroid-sys" }
libEGL-sys = { path = "./libEGL-sys" }
liblog-sys = { path = "./liblog-sys" }
libvrapi-sys = { path = "./libvrapi-sys" }
jni = { default-features = false, version = "*" }
