[package]
name = "native"
version = "0.1.0"
authors = ["Eddy Bruel <ejpbruel@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
libEGL-sys = { path = "./libEGL-sys" }
libGLESv3-sys = { path = "./libGLESv3-sys" }
libandroid-sys = { path = "./libandroid-sys" }
liblog-sys = { path = "./liblog-sys" }
libvrapi-sys = { path = "./libvrapi-sys" }
jni = { default-features = false, version = "*" }
